Version 5.1.X: (noch nicht veröffentlicht)
==============
- Wegen datenschutzrechtlicher Änderungen beim WCG ist der WCG-Badge-Abruf bei SETI.Germany nicht mehr möglich und wurde aus dem Badge-Feature dieser Stats entfernt

geänderte bzw. neu hinzugefügte Dateien:
    - ../changelog.txt
    - ./settings/settings.php
    - index.php
    - project.php





Version 5.1.0: 
==============
- Das Error-Management für neue Nutzer der BOINC-Userstats wurde verbessert (Issue #21)
  Sofern noch keine Änderungen an den Credits bei den Projekten vorhanden waren, wurde lediglich der Header und Footer angezeigt.
  Nun sollte die Tabelle angezeigt werden und ein Hinweis in den Charts erfolgen, wenn noch keine Daten zum Anzeigen vorhanden sind.
- Integration einer Update-Prüfung
  Diese ist standardmäßig deaktiviert. Zum Aktivieren dieses Features muss in der ./settings/settings.php die Variable $setUpdatecheck auf true gesetzt werden.
  Auch bei deaktivierter Option kann jederzeit über den Aufruf der check_update.php im Browser eine Prüfung erfolgen.
  Bei aktiviertem Update-Check wird eine entsprechende Info (ganz rechts) in der Navbar angezeigt. Diese ist mit einem Link für weitere Infos (check_update.php) versehen.
- Einbindung von Bootstrap 4 Release
- Überschriften der Modals (Impressum etc.) werden nun an ihrer richtigen Position angezeigt.
  Zudem wurde das "Popup" etwas kleiner gestaltet und die Schrift entsprechend dem "Kleingedruckten" verkleinert.
- Es wurde ein Problem behoben, dass wenn ein Projekt neu hinzugefügt wurde, die Projekt-Details erst am Tag danach angezeigt wurden. 
  Zudem erscheint bei neu hinzugefügten Projekten eine Info, falls noch keine validen Arbeitspakete abgeliefert wurden.
- es wurde ein Problem mit der Umstellung Sommer-/Winterzeit behoben (Daylight Savings).
  Durch die Integration von moment.js erfolgt die Anzeige entsprechend der Voreingestellten Zeitzone (bislang bis zum Jahr 2022) incl. evtl. Zeitumstellungen nun automatisch.